Registering jwt logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.application.name=DigitalWallet
 spring.datasource.url=jdbc:postgresql://localhost:5433/wallet_db
 spring.datasource.username=postgres
 spring.datasource.password=740420
+
+jwt_secret=xY3vxBnDj5GVxkhfWQU4og27SskvfK45yNxqSdt1YLv4
